# unicode_names

./: .gitignore  .travis.yml  Cargo.toml  README.md  deploy-docs.sh  index.html  search-index.js
data/: codepoint_name.csv
examples/: count.rs
generator/: Cargo.toml  formatting.rs  generator.rs  phf.rs  trie.rs  util.rs
generator/src/: formatting.rs  main.rs  phf.rs  trie.rs  util.rs
implementors/core/clone/: trait.Clone.js
implementors/core/fmt/: trait.Debug.js  trait.Display.js
implementors/core/iter/: trait.Iterator.js
src/: computed_phf.py  generate.py  generated.rs  generated2.rs  generated_phf.rs  iter_str.rs  jamo.rs  lib.rs  ngrams.py  phf.rs  phf_computed.py  smart_generator.py
src/unicode_names/: jamo.rs.html  lib.rs.html
unicode_names/: fn.character.html  fn.name.html  index.html  sidebar-items.js  struct.Name.html
unicode_names_macros/: Cargo.toml
unicode_names_macros/examples/: top_level_doc_example.rs
unicode_names_macros/src/: lib.rs
unicode_names_macros/tests/: test.rs
