[package]

name = "unicode_names_macros"
version = "0.0.1"
authors = ["Huon Wilson <dbau.pp@gmail.com>"]

homepage = "https://github.com/huonw/unicode_names"
repository = "https://github.com/huonw/unicode_names"
documentation = "http://huonw.github.io/unicode_names/unicode_names/"
license = "MIT/APL2"
keywords = ["text", "unicode", "plugin"]
description = "Support macros for `unicode_names`."

[dependencies.unicode_names]
path = ".."

[lib]
name = "unicode_names_macros"
plugin = true
