[package]

name = "unicode_names_macros"
version = "0.1.5"
authors = ["Huon Wilson <dbau.pp@gmail.com>"]

homepage = "https://github.com/huonw/unicode_names"
repository = "https://github.com/huonw/unicode_names"
documentation = "http://huonw.github.io/unicode_names/unicode_names/"
license = "MIT/Apache-2.0"
keywords = ["text", "unicode", "plugin"]
description = "Support macros for `unicode_names`."

[dependencies]
regex = "0.1.8"
regex_macros = "0.1.2"

[dependencies.unicode_names]
path = ".."
version = "0.1"

[lib]
name = "unicode_names_macros"
plugin = true
